<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/drawer_home" android:icon="@drawable/ic_home" android:title="@string/home" />
        <item android:id="@+id/drawer_catalog" android:icon="@drawable/ic_catalog" android:title="@string/catalog" />
        <item android:id="@+id/drawer_popular" android:icon="@drawable/ic_popular" android:title="@string/popular" />
        <item android:id="@+id/drawer_favorite" android:icon="@drawable/ic_favorite" android:title="@string/favorite" />
        <item android:id="@+id/drawer_cart" android:icon="@drawable/ic_cart" android:title="@string/cart" />
        <item android:id="@+id/drawer_profile" android:icon="@drawable/ic_profile" android:title="@string/profile" />
        <item android:id="@+id/drawer_orders" android:icon="@drawable/ic_orders" android:title="@string/orders" />
        <item android:id="@+id/drawer_notification" android:icon="@drawable/ic_notification" android:title="@string/notification" />
    </group>
    <item android:id="@+id/drawer_logout" android:icon="@drawable/ic_logout" android:title="@string/logout" />
</menu>
