<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:maxLines="1" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLines="1" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1" />
</LinearLayout>
